alterando-a-tabela-tabela

--- a/pagina_de_testes/index.html
+++ b/pagina_de_testes/index.html
@@ -20,9 +20,9 @@
   <p>Meu gatinho é <strong>muito</strong> mal humorado.</p>
     
   <ul>
-    <li>meleca</li>
-    <li>meleca2</li>
-    <li>meleca3</li>
+    <li>Meleca</li>
+    <li>Careca</li>
+    <li>Chinela</li>
   </ul>
 
 
