Update and rename pagina_de_testes/index.html to pagina_de_testesindex.html

--- a/pagina_de_testesindex.html
+++ b/pagina_de_testesindex.html
@@ -5,6 +5,8 @@
     <title>Minha página de teste</title>
     <link href="estilos/index.css" rel="stylesheet">
     <link href = "http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="author" content="https://github.com/brunoZan" />
+    <meta name="description" content="pagina destinada somente pra estudos de conceitos html, css e jav script" />
   </head>
   <body>
     <h1> Meu gatinho é muito mal humorado</h1>
