Adicionado autor, icon e um gif

--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <title>Minha página de teste</title>
     <link href="estilos/index.css" rel="stylesheet">
     <link href = "http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <meta name="author" content="https://github.com/brunoZan" />
-    <meta name="description" content="pagina destinada somente pra estudos de conceitos html, css e jav script" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta name="author" content="https://github.com/brunoZan">
+    <meta name="description" content="uma pafina html simple, apenas para aprender conceitro html css e java script">
+
   </head>
   <body>
     <h1> Meu gatinho é muito mal humorado</h1>
 
-  <img src="https://pbs.twimg.com/media/FZMz-dmagAE4F-D?format=jpg&name=900x900" alt="Minha imagem de teste">
+    <img id="changeImg" src="https://pbs.twimg.com/media/FZMz-dmagAE4F-D?format=jpg&name=900x900" alt="Minha imagem de teste">
   
-  <p>
-   <a href = "https://www.deviantart.com/brunozan/art/Olho-924983088" target = "_blank" rel = "noreferrer noopener" >
+    <p>
+      <a href = "https://www.deviantart.com/brunozan/art/Olho-924983088" target = "_blank" rel = "noreferrer noopener" title="Deviant&#39;Art" >
+    Link da imagem
+      </a> 
+    </p>
+  
+    <p>Meu gatinho é <strong>muito</strong> mal humorado.</p>
     
-      Link da imagem
-   </a> 
-  </p>
-  <p>Meu gatinho é <strong>muito</strong> mal humorado.</p>
+    <ul>
+    <li>meleca</li>
+    <li>meleca2</li>
+    <li>meleca3</li>
+    </ul>
+    <button>Mudar usuário</button><br>
     
-  <ul>
-    <li>Meleca</li>
-    <li>Careca</li>
-    <li>Chinela</li>
-  </ul>
+    <input type="text" disabled="true">
 
-
-
-<button>Mudar usuário</button>
-<script src="scripts/index.js" type="text/javascript"></script>
+    <img id="gif" src="01.gif" width="500px">
+    <p lang="jp">Exemplo Japonês:ご飯が熱い</p>
+    <script src="scripts/index.js" type="text/javascript" ></script>
   </body>
 </html> 
