--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Minha página de teste</title>
     <link href="estilos/index.css" rel="stylesheet">
     <link href = "http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <meta name="author" content="https://github.com/brunoZan">
     <meta name="description" content="uma pafina html simple, apenas para aprender conceitro html css e java script">
 
@@ -13,7 +13,7 @@
   <body>
     <h1> Meu gatinho é muito mal humorado</h1>
 
-    <img id="changeImg" src="https://pbs.twimg.com/media/FZMz-dmagAE4F-D?format=jpg&name=900x900" alt="Minha imagem de teste">
+    <img id="changeImg" src="https://pbs.twimg.com/media/FZMz-dmagAE4F-D?format=jpg&name=900x900" alt="imagem de teste">
   
     <p>
       <a href = "https://www.deviantart.com/brunozan/art/Olho-924983088" target = "_blank" rel = "noreferrer noopener" title="Deviant&#39;Art" >
@@ -32,7 +32,7 @@
     
     <input type="text" disabled="true">
 
-    <img id="gif" src="01.gif" width="500px">
+    <img id="gif" src="imagens/01.gif" width="500px">
     <p lang="jp">Exemplo Japonês:ご飯が熱い</p>
     <script src="scripts/index.js" type="text/javascript" ></script>
   </body>
